# Adrenaline

./: .gitignore  CMakeLists.txt  LICENSE  adrenaline_compat.h  readme.md  readme.txt
bubble/: CMakeLists.txt  graphics.c  graphics.h  main.c  pspdebug.h  scr_printf.c  utils.c  utils.h
bubble/pkg/: eboot.pbp
bubble/pkg/sce_module/: adrenaline_kernel.skprx  adrenaline_user.suprx  adrenaline_vsh.suprx  usbdevice.skprx
bubble/pkg/sce_sys/livearea/contents/: template.xml
buildscripts/: build.sh  build_docker.sh  clean.sh  clean_docker.sh
buildscripts/docker/: Dockerfile  build.sh
buildscripts/docker/scripts/: utils.sh
buildscripts/docker/scripts/psp_scripts/: build_psp-packer.sh  build_pspdev.sh
buildscripts/docker/scripts/vita_scripts/: build_vdpm.sh  build_vita-shader-collection.sh  build_vita2dlib.sh
buildscripts/modules/: bubble.sh  cef.sh  kernel.sh  updater.sh  user.sh  vsh.sh
cef/: Makefile
cef/binary/: Makefile  linkfile.x  main.c  start.S
cef/btcnf/pspbtcnf_inferno/: build.bat  pspbtcnf.txt
cef/btcnf/pspbtcnf_march33/: build.bat  pspbtcnf.txt
cef/btcnf/pspbtcnf_normal/: build.bat  pspbtcnf.txt
cef/btcnf/pspbtcnf_np9660/: build.bat  pspbtcnf.txt
cef/btcnf/pspbtcnf_recovery/: build.bat  pspbtcnf.txt
cef/flash0/kd/: inferno.prx  march33.prx  popcorn.prx  systemctrl.prx  vshctrl.prx
cef/flash0/vsh/module/: recovery.prx  satelite.prx
cef/include/: common.h  kubridge.h  libpsardumper.h  pspcrypt.h  pspctrl.h  psperror.h  pspinit.h  psploadcore.h  psploadexec_kernel.h  pspmodulemgr.h  pspmodulemgr_kernel.h  pspsysmem.h  pspsysmem_kernel.h  psputilsforkernel.h  pspvshbridge.h  systemctrl.h  systemctrl_se.h  vita_pops.h  vlf.h  vshctrl.h
cef/inferno/: Makefile  exports.exp  imports.S  inferno.h  inferno_patch_offset.c  inferno_patch_offset.h  iodrv_funcs.c  isocache.c  isoread.c  libs.h  main.c  printk.h  pspcrypt.h  sctrlrand.c  sctrlrand.h  umd.c  utils.c  utils.h
cef/lib/: build_bin.mak
cef/lib/libpspsystemctrl_kernel/: Makefile  SystemCtrlForKernel.S
cef/lib/libpspsystemctrl_user/: Makefile  SystemCtrlForUser.S
cef/payloadex/: Makefile  libc.h  linkfile.x  main.c
cef/popcorn/: Makefile  exports.exp  main.c  main.h
cef/rebootex/: Makefile  libc.c  libc.h  main.c  main.h
cef/recovery/: Makefile  files.h  installer.c  installer.h  main.c  main.h  menu.c  menu.h  options.h  plugins.c  plugins.h  pspPSAR.S  utils.c  utils.h
cef/satelite/: Makefile  blit.c  blit.h  exports.exp  main.c  main.h  menu.c  menu.h  scePaf.S
cef/systemctrl/: LflashFatfmt.c  Makefile  adrenaline.c  adrenaline.h  binary.h  conf.c  executable_patch.c  executable_patch.h  exports.exp  imports.S  init_patch.c  init_patch.h  io_patch.c  io_patch.h  kubridge.c  libraries_patch.c  libraries_patch.h  main.c  main.h  malloc.c  nid_map.txt  nid_table.h  nodrm.c  nodrm.h  power_patch.c  power_patch.h  rebootex.h  setjmp_clone.S  string_clone.c  string_clone.h  sysmodpatches.c  sysmodpatches.h  systemctrl.c  utility_patch.c  utility_patch.h
cef/updater/: Makefile  UPDATE.SFO  adrenaline_kernel.h  adrenaline_skprx.h  adrenaline_suprx.h  adrenaline_user.h  main.c  usbdevice_skprx.h
cef/vshctrl/: Makefile  exports.exp  main.c  main.h  virtualpbpmgr.c  virtualpbpmgr.h  vshmenu.h
cef/vshctrl/isofs_driver/: csoread.c  csoread.h  isofs_driver.c  isofs_driver.h  umd9660_driver.c  umd9660_driver.h
kernel/: CMakeLists.txt  exports.yml  main.c  utils.c  utils.h
user/: CMakeLists.txt  exports.yml  files.h  flashfs.c  flashfs.h  main.c  main.h  math_utils.c  math_utils.h  menu.c  menu.h  msfs.c  msfs.h  pops.c  pops.h  startdat.h  states.c  states.h  titleinfo.c  titleinfo.h  usb.c  usb.h  utils.c  utils.h  vflux_f.h  vflux_v.h
user/files/: galaxy.h  inferno.h  kermit_idstorage.h  libpsardumper.h  march33.h  payloadex.h  popcorn.h  pspbtjnf.h  pspbtknf.h  pspbtlnf.h  pspbtmnf.h  pspbtrnf.h  recovery.h  satelite.h  systemctrl.h  vshctrl.h
user/flash0/kd/: galaxy.prx  inferno.prx  kermit_idstorage.prx  libpsardumper.prx  popcorn.prx  systemctrl.prx
user/flash0/vsh/module/: recovery.prx
vsh/: CMakeLists.txt  exports.yml  main.c  utils.c  utils.h
